--- a/templates/craft_sicherungWebsite/templates/fuerSie/daheim.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/daheim.html
@@ -7,43 +7,58 @@
 
 <div class="container-fluid text-center" style="padding-top: 150px; position: relative;">
 
-<img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <img class="img-fluid" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
-<div class="container achterspaltenlayout">
-  {% set entry = craft.entries.section('fuerSie').slug('gerechtigkeit').one() %}
+  <div class="container achterspaltenlayout">
+    {% set entry = craft.entries.section('fuerSie').slug('gerechtigkeit').one() %}
 
-  <div style="padding-bottom:30px; ">
-    <h1 style="padding-bottom: 30px;"> {{ entry.title }}  </h1>
-    <div id="anleser"> {{ entry.anleser }}  </div>
+    <div style="padding-bottom:30px; ">
+      <h1 style="padding-bottom: 30px;"> {{ entry.title }}  </h1>
+      <div id="anleser"> {{ entry.anleser }}  </div>
     </div>
   </div>
 </div>
 
-<div class="container zwoelferspaltenlayout">
-
-    <div class="row">
 
 {% set entries = entry.children().all() %}
 
-  {# If there are any entries, loop through them #}
-  {% set counter = 0 %}
+<div class="container zwoelferspaltenlayout">
+  <div class="card-deck">
+    <div class="row">
 
-      {# For each entry we find, do this #}
-      {% for entry in entries %}  {% set counter = counter + 1 %}
-        {% if counter == 4 %} <div class="col-sm-4">  </div>   {% endif %}
+      {% set counter = 0 %}
 
-      <div class="col-sm-4">
-        <div class="row" style="height: 100%;">
-          <div class="col-1"> </div>
-            <div class="col-10" style="background-color: #ffffff;  padding-top: 15px;">
+      {% for entry in entries %}
+      {% set counter = counter + 1 %}
+      <div class="col-lg-4 col-md-6 col-sm-6" style="padding-bottom: 50px;">
+
+        <div class="card border-light h-100">
+          <img class="card-img-top"
+          src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
+          <div class="card-body">
             <h3>{{ entry.title }}</h3>
             <div id="copy"> {{ entry.anleser }} </div>
           </div>
         </div>
-    </div>
+      </div>
+      {% if counter == 6 %}  <div class="col-lg-4 col-md-3 col-sm-3"> </div> {% endif %}
       {% endfor %}
-
     </div>
   </div>
+</div>
+
+{% set entry = craft.entries.section('fuerSie').slug('fuelleintrag').one() %}
+<div class="container-fluid no-padding"  style="background-image: url({{ entry.bild.one().url }});">
+  <div class="row">
+    <div class="col-1">  </div>
+    <div class="col-2">   <img class="img-fluid" src="{{ entry.bild2.one().url }}" style="max-height: 200px;"> </div>
+    <div class="col-1">  </div>
+    <div class="col-7">
+      <h4 style="color: white;"> {{ entry.zusatzfeld2 }} </h4>
+      <div id="copy" style="color: white;"> {{ entry.zusatzfeld3 }}</div>
+      <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
+    </div>
+  </div>
+</div> <!-- Der orange Berg mit dem Spendenaufruf -->
 
 {% endblock %}
