--- a/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/bewerbung.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/bewerbung.html
@@ -42,7 +42,7 @@
 </div> <!-- Das Wolkenbild mit den Zitaten drin -->
 </div> <!-- Weißer Hintergrund-Div -->
 
-  <div class="container achterspaltenlayout">
+  <div class="container achterspaltenlayout" style="padding-top: 2rem;">
     {% set entry = craft.entries.section('fuerSie').slug('bewerbung').one() %}
     <div class="text-center"> <h2> {{ entry.title }} </h2> </div>
     <div id="copy"> {{ entry.anleser }}</div>
