--- a/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/weltwaerts.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/weltwaerts.html
@@ -53,15 +53,15 @@
 
 <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px;">
 <div class="row">
-  <div class="col-4">
-    <img class="img-fluid"  src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+  <div class="col-md-4">
+    <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
   </div>
-  <div class="col-8" style="padding-top: 2rem;">
+  <div class="col-md-8" style="padding-top: 2rem;">
     <h3> {{ entry.title }} </h3>
     <div id="copy"> {{ entry.anleser }}</div>
   </div>
 </div>
-</div>
+</div> <!-- Weitere Informationen zum Freiwilligendienst -->
 
 </div> <!-- Weißer Hintergrund-Div -->
 
