--- a/templates/craft_sicherungWebsite/templates/fuerSie/zitate.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/zitate.html
@@ -24,13 +24,34 @@
       {% set entries = entry.children().all() %}
 
     {% for entry in entries %}
-     <div id="zitat"> {{ entry.title }} </div>
+     <div id="copy" style="padding-bottom: 1rem;"> {{ entry.title }} </div>
      <div id="autor"> {{ entry.anleser }} </div>
      {% endfor %}
 
     </div>
   </div> <!-- weißer Hintergrundcontainer -->
 
+  <div class="container-fluid no-padding" style="background-color: white; padding-bottom: 3rem;">
+    <div class="container zwoelferspaltenlayout" style="padding-top: 0px;">
+    <hr> <br> <p id="anleser" class="text-center"> Wofür wir uns einsetzen </p>
+    </div>
+
+    {% set entry = craft.entries.section('projekte').slug('themen').one() %}
+
+    <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px;">
+    <div class="row">
+      <div class="col-md-4">
+        <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+      </div>
+      <div class="col-md-8" style="padding-top: 2rem;">
+        <h3> {{ entry.title }} </h3>
+        <div id="copy"> {{ entry.text }}</div>
+      </div>
+    </div>
+  </div> <!-- Weiterleitung zu Zitate -->
+
+
+  </div> <!-- Weißer Hintergrundcontainer -->
 
 
 
