--- a/templates/craft_sicherungWebsite/templates/projekte/index.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/index.html
@@ -33,41 +33,64 @@
     </div>
   </div>
 
-  <div class="container zwoelferspaltenlayout">
 
-      <div class="row">
+    <div class="container zwoelferspaltenlayout">
+      <div class="card-deck">
+        <div class="row">
 
-    {% set entries = craft.entries.section('projekte').level(1).all() %}
+          {% set entries = craft.entries.section('projekte').level(1).all() %}
+          {% set counter = 0 %}
 
-    {# If there are any entries, loop through them #}
-    {% if entries | length %}
+          {% for entry in entries %}  {% if entry.slug != 'blick' %}
+          {% set counter = counter + 1 %}
+          <div class="col-lg-4 col-md-6 col-sm-6" style="padding-bottom: 50px;">
 
-        {% set counter = 0 %}
-
-        {# For each entry we find, do this #}
-        {% for entry in entries %}      {% set counter = counter + 1 %}
-
-        <div class="col-sm-4">
-          <div class="row">
-                 <div class="col-11">
-              <h3>{{ entry.title }}</h3>
-              <div id="copy"> {{ entry.text }} </div>
+          <div class="card border-light h-100">
+            <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
+            <div class="card-body">
+                <h3>{{ entry.title }}</h3>
+                <div id="copy"> {{ entry.text }} </div>
             </div>
           </div>
+        </div>
+        {% if counter == 3 %}  <div id="verschwinde-lg-2" class="col-lg-2"> </div> {% endif %}
+        {% endif %}
+          {% endfor %}
+          </div>
+        </div>
       </div>
 
-
-        {% if counter == 3 %}
-        <div class="col-sm-2"> </div>    {% endif %}
-
-        {% endfor %}
-
-    {% endif %}
+  <div class="container-fluid no-padding" style="background-color: #9EAC50">
+    {% set entry = craft.entries.section('projekte').slug('blick').one() %}
+    <div class="container zwoelferspaltenlayout" id="horizontalrulerweis">
+      <h3 class="text-center" style="color: white;"> {{ entry.title }} </h3> <br>
+      <div class="row" id="copy" style="color: white;">
+        <div class="col-4">
+          {{ entry.text }}
+        </div>
+        <div class="col-4">
+          {{ entry.zusatzfeld1 }}
+        </div>
+        <div class="col-4">
+          {{ entry.zusatzfeld2 }}
+        </div>
       </div>
     </div>
-
-  <div class="container-fluid no-padding">
-    <img class="img-fluid" src=" {{ craft.assets.filename('chance-projekte-programme.jpg').one().getUrl() }} ">
+    <img class="img-fluid mx-auto d-block" style="padding-bottom: 0;" src=" {{ craft.assets.filename('chance-projekte-programme.jpg').one().getUrl() }} ">
   </div>
+
+  {% set entry = craft.entries.section('fuerSie').slug('fuelleintrag').one() %}
+  <div class="container-fluid no-padding"  style="background-image: url({{ entry.bild.one().url }});">
+    <div class="row">
+      <div class="col-1">  </div>
+      <div class="col-2">   <img class="img-fluid" src="{{ entry.bild2.one().url }}" style="max-height: 200px;"> </div>
+      <div class="col-1">  </div>
+      <div class="col-7">
+        <h4 style="color: white;"> {{ entry.zusatzfeld2 }} </h4>
+        <div id="copy" style="color: white;"> {{ entry.zusatzfeld3 }}</div>
+        <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
+      </div>
+    </div>
+  </div> <!-- Der orange Berg mit dem Spendenaufruf -->
 
 {% endblock %}
