--- a/templates/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
@@ -86,7 +86,7 @@
         <div id="anleser" style="color: #ffffff;"> {{ entry.anleser }}    </div>
     </div>
 
-    <div class="container zwoelferspaltenlayout">
+    <div class="container zwoelferspaltenlayout" style="padding:0;">
 
       <div class="row">
       {% set entries = craft.entries.section('projekte').slug('das-ziel-starke-dörfer').one().children().all() %}
@@ -104,23 +104,23 @@
 
     </div>
   </div>
-</div>
+  <img class="img-fluid mx-auto d-block"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 0;">
+</div> <!-- Weißer Hintergrundcontainer -->
 
-<div class="container-fluid no-padding" style="background-color: #ED6E2C;">
-  <div class="container zwoelferspaltenlayout">
-    {% set entry = craft.entries.section('projekte').slug('dorfpate-werden').one() %}
-    <div class="row">
-      <div class="col-sm-4">
-        Bild kommt da rein
-      </div>
-
-      <div class="col-sm-8">
-      <h3 style="color: #ffffff;"> {{ entry.title }} </h3>
-      <div id="copy" style="color: #ffffff;"> {{ entry.text }}    </div>
-    </div>
+{% set entry = craft.entries.section('projekte').slug('dorfpate-werden').one() %}
+<div class="container-fluid no-padding"  style="background-image: url({{ entry.bild.one().url }});">
+  <div class="row">
+    <div class="col-1">  </div>
+    <div class="col-2 align-self-center">   <img class="img-fluid" src="{{ entry.bild.inReverse().one().url }}" style="max-height: 200px;"> </div>
+    <div class="col-1">  </div>
+    <div class="col-7">
+      <h4 style="color: white;"> {{ entry.title }} </h4>
+      <div id="copy" style="color: white;"> {{ entry.text }}</div>
+      <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Dorfpate werden</a>
     </div>
   </div>
-</div>
+</div> <!-- Der orange Berg mit dem Spendenaufruf -->
+
 
 <div class="container-fluid no-padding" style="background-color: white;">
   <div class="container achterspaltenlayout text-center">
@@ -129,7 +129,38 @@
       <h2> {{ entry.title }} </h2>
       <div id="anleser"> {{ entry.text }}    </div>
   </div>
+
 </div>
+
+<div class="container zwoelferspaltenlayout" style="padding-top: 0; padding-bottom: 2rem;">
+  <ul class="nav nav-pills justify-content-center" id="pills-tab" role="tablist" style="background-color: white;">
+  <li class="nav-item">
+    <a class="nav-link active tab" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">Peru</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link tab" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">Kenia</a>
+  </li>
+</ul>
+<div class="tab-content" id="pills-tabContent">
+  <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+    <img class="img-fluid mx-auto d-block"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 0;">
+</div>
+  <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+    <img class="img-fluid mx-auto d-block"  src="  {% if entry.bild.inReverse().one() is not null %}  {{ entry.bild.inReverse().one().getUrl() }}  {% endif %}" style="padding-bottom: 0;">
+</div>
+</div> <!-- Die Tabs mit den verschiedenen Dorfentwicklungsprogrammen, wechselbar durch klicken -->
+</div>
+
+{% set entry = craft.entries.section('fuerSie').slug('chancengeber').one() %}
+<div class="container-fluid no-padding" style="background-image: url({{ entry.bild.one().url }})">
+  <div class="container achterspaltenlayout text-center">
+    {% set entries = entry.children().all() %}
+    {% set entry = random(entries) %}
+    <div id="zitat"  style="padding-bottom: 0px;"> {{ entry.text }}  </div>
+    <div id="autor"> {{ entry.title }}  </div>
+  </div>
+</div> <!-- Das Wolkenbild mit den Zitaten drin -->
+
 
 <div class="container-fluid no-padding" style="background-color: white;">
   <div class="container achterspaltenlayout text-center">
@@ -145,7 +176,37 @@
         <div class="col-sm-3"> Hier kommt der Erfahrungsbericht hin  </div>
     </div>
   </div>
-</div>
+
+  <div class="container zwoelferspaltenlayout text-center">
+    {% set entry = craft.entries.section('projekte').slug('patenschaft').one() %}
+     <hr style="height: 1px;"> <div id="anleser"> Lernen Sie unsere weiteren Progamme kennen </div>
+  </div>
+
+  <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 3rem;">
+  <div class="row">
+    <div class="col-md-4">
+      <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+    </div>
+    <div class="col-md-8" style="padding-top: 2rem;">
+      <h3> {{ entry.title }} </h3>
+      <div id="copy"> {{ entry.text }}</div>
+    </div>
+  </div>
+  </div> <!-- Weitere Informationen zum Freiwilligendienst -->
+
+  {% set entry = craft.entries.section('projekte').slug('naturschutz').one() %}
+  <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 3rem;">
+  <div class="row">
+    <div class="col-md-4">
+      <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+    </div>
+    <div class="col-md-8" style="padding-top: 2rem;">
+      <h3> {{ entry.title }} </h3>
+      <div id="copy"> {{ entry.text }}</div>
+    </div>
+  </div>
+  </div> <!-- Weitere Informationen zum Freiwilligendienst -->
+
 </div>
 
   {% endblock %}
