--- a/templates/craft_sicherungWebsite/templates/projekte/erfahrungsberichte.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/erfahrungsberichte.html
@@ -16,33 +16,66 @@
   </div>
 </div>
 
-<div class="container zwoelferspaltenlayout" >
 
-<div class="card-columns">
-
-  {% set entries = craft.entries.section('projekte').slug('erfahren-sie-mehr').one().children().all() %}
-
-  {# If there are any entries, loop through them #}
+<div class="container zwoelferspaltenlayout">
+  <div class="card-columns">
+  {% set entry = craft.entries.section('projekte').slug('erfahren-sie-mehr').one() %}
+  {% set entries = entry.children().all() %}
   {% if entries | length %}
-
-      {# For each entry we find, do this #}
       {% for entry in entries %}
-
       <div class="card bg-white">
-        <div class="card-body">
+        <div class="wrapper" style="background-color: #f8f5f2; max-height: 95px;">
+        <img class="card-img-top rounded-circle" style="border:8px solid #f8f5f2; max-height: 160px; max-width: 160px; display: block; margin-left: auto; margin-right: auto;  width: 50;"
+        src="{% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
+      </div>
+        <div class="card-body" style="padding-top: 3rem;">
           <p class="card-text">
             <h3> {{ entry.title }} </h3>
-            <h4> {{ entry.anleser }} </h4>
-            <div id="copy"> {{ entry.text }} </div>
+            <div id="copy"> <strong> {{ entry.anleser }} </strong> </div>
+            <div id="copy"> {{ entry.text }}</div>
           </p>
         </div>
       </div>
-
       {% endfor %}
-
-  {% endif %}
-
+      {% endif %}
+    </div>
   </div>
-</div>
+
+{% set entry = craft.entries.section('fuerSie').slug('fuelleintrag').one() %}
+<div class="container-fluid no-padding"  style="background-image: url({{ entry.bild.one().url }});">
+  <div class="row">
+    <div class="col-1">  </div>
+    <div class="col-2">   <img class="img-fluid" src="{{ entry.bild2.one().url }}" style="max-height: 200px;"> </div>
+    <div class="col-1">  </div>
+    <div class="col-7">
+      <h4 style="color: white;"> {{ entry.zusatzfeld2 }} </h4>
+      <div id="copy" style="color: white;"> {{ entry.zusatzfeld3 }}</div>
+      <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
+    </div>
+  </div>
+</div> <!-- Der orange Berg mit dem Spendenaufruf -->
+
+<div class="container-fluid no-padding" style="background-color: #ffffff; padding-bottom: 3rem;">
+
+  <div class="container zwoelferspaltenlayout text-center">
+    {% set entry = craft.entries.section('projekte').slug('projektberichte').one() %}
+   <div id="anleser" style="padding-bottom: 3rem;"> Erfahren Sie mehr über unsere Projekte vor Ort </div>
+  </div>
+
+  <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px;">
+  <div class="row">
+    <div class="col-md-4">
+      <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+    </div>
+    <div class="col-md-8" style="padding-top: 2rem;">
+      <h3> {{ entry.title }} </h3>
+      <div id="copy"> {{ entry.text }}</div>
+    </div>
+  </div>
+  </div> <!-- Weitere Informationen zum Freiwilligendienst -->
+
+
+</div> <!-- Weißer Hintergrundcontainer -->
+
 
 {% endblock %}
