--- a/templates/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/kinderpate.html
@@ -88,8 +88,7 @@
 
 <div class="container-fluid no-padding"  style="background-image: url({{ entry.bild.one().url }});">
   <div class="row">
-    <div class="col-4" style="position: relative">   <img style="position: absolute; bottom: 0; padding-bottom: 0;" class="img-fluid" src="{{ entry.bild.inReverse().one().url }}"> </div>
-    <div class="col-1"></div>
+    <div class="col-5" style="position: relative">   <img id="kind" style="position: absolute; bottom: 0; padding-bottom: 0;" class="img-fluid" src="{{ entry.bild.inReverse().one().url }}"> </div>
     <div class="col-7">
       <h4 style="color: white;"> {{ entry.title }} </h4>
       <div id="copy" style="color: white;"> {{ entry.text }}</div>
@@ -101,8 +100,8 @@
 <div class="container zwoelferspaltenlayout text-center">
   {% set entry = craft.entries.section('projekte').slug('ganzheitliche-begleitung').one() %}
     <h2> {{ entry.title }} </h2>
-      bild kommt hierhin
-</div>
+    <img class="img-fluid mx-auto d-block"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" style="padding-bottom: 0;">
+</div> <!-- ganzheitliche Begleitung -->
 
 <div class="container-fluid no-padding" style="background-color: white;">
   <div class="container achterspaltenlayout text-center">
@@ -111,7 +110,36 @@
       <h2> {{ entry.title }} </h2>
       <div id="anleser"> {{ entry.anleser }}    </div>
   </div>
+
+<div class="container zwoelferspaltenlayout text-center">
+  {% set entry = craft.entries.section('projekte').slug('dorfentwicklung-chancen-für-dörfer').one() %}
+   <hr style="height: 1px;"> <div id="anleser"> Lernen Sie unsere weiteren Progamme kennen </div>
 </div>
 
+<div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 3rem;">
+<div class="row">
+  <div class="col-md-4">
+    <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+  </div>
+  <div class="col-md-8" style="padding-top: 2rem;">
+    <h3> {{ entry.title }} </h3>
+    <div id="copy"> {{ entry.text }}</div>
+  </div>
+</div>
+</div> <!-- Weitere Informationen zur Dorfentwicklung -->
+
+{% set entry = craft.entries.section('projekte').slug('naturschutz').one() %}
+<div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 3rem;">
+<div class="row">
+  <div class="col-md-4">
+    <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+  </div>
+  <div class="col-md-8" style="padding-top: 2rem;">
+    <h3> {{ entry.title }} </h3>
+    <div id="copy"> {{ entry.text }}</div>
+  </div>
+</div>
+</div> <!-- Weitere Informationen zum Naturschutz -->
+</div>
 
   {% endblock %}
