--- a/templates/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
@@ -32,7 +32,7 @@
 </div>
 
 <div class="container-fluid no-padding" style="margin-top: -50px;">
-  <img class="img-fluid" src=" {{ craft.assets.filename('chance-projekte-programme-naturschutz.jpg').one().getUrl() }}">
+  <img class="img-fluid mx-auto d-block" src=" {{ craft.assets.filename('chance-projekte-programme-naturschutz.jpg').one().getUrl() }}">
 </div>
 
 <div class="container achterspaltenlayout text-center">
@@ -98,23 +98,22 @@
     </div>
   </div>
 
-  <div class="container-fluid no-padding" style="background-color: #ED6E2C;">
-    <div class="container zwoelferspaltenlayout">
-      {% set entry = craft.entries.section('projekte').slug('waldpate-werden').one() %}
-      <div class="row">
-        <div class="col-sm-4">
-          Bild kommt da rein
-        </div>
+  {% set entry = craft.entries.section('projekte').slug('waldpate-werden').one() %}
 
-        <div class="col-sm-8">
-          <h3 style="color: #ffffff;"> {{ entry.title }} </h3>
-          <div id="copy" style="color: #ffffff;"> {{ entry.text }}    </div>
-        </div>
+  <div class="container-fluid no-padding"  style="background-image: url({{ entry.bild.one().url }});">
+    <div class="row">
+      <div class="col-1"> </div>
+      <div class="col-4 align-self-center">   <img class="img-fluid" src="{% if entry.bild.inReverse().one() is not null %}  {{ entry.bild.inReverse().one().getUrl() }}  {% endif %}"> </div>
+      <div class="col-7">
+        <h4 style="color: white;"> {{ entry.title }} </h4>
+        <div id="copy" style="color: white;"> {{ entry.text }}</div>
+        <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
       </div>
     </div>
-  </div>
+  </div> <!-- Der orange Berg mit dem Spendenaufruf -->
 
-  <div class="container achterspaltenlayout text-center">
+
+  <div class="container achterspaltenlayout text-center" style="padding-top: 2rem;">
     {% set entry = craft.entries.section('projekte').slug('regenwald').one() %}
 
     <h2> {{ entry.title }} </h2>
@@ -184,5 +183,37 @@
     <h2> {{ entry.title }} </h2>
     <div id="anleser"> {{ entry.anleser }}    </div>
   </div>
+
+<div class="container-fluid no-padding" style="background-color: white;">
+      <div class="container zwoelferspaltenlayout text-center">
+      {% set entry = craft.entries.section('projekte').slug('dorfentwicklung-chancen-für-dörfer').one() %}
+       <div id="anleser"> Lernen Sie unsere weiteren Progamme kennen </div>
+    </div>
+
+    <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 3rem;">
+    <div class="row">
+      <div class="col-md-4">
+        <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+      </div>
+      <div class="col-md-8" style="padding-top: 2rem;">
+        <h3> {{ entry.anleser }} </h3>
+        <div id="copy"> {{ entry.text }}</div>
+      </div>
+    </div>
+    </div> <!-- Weitere Informationen zum Freiwilligendienst -->
+
+    {% set entry = craft.entries.section('projekte').slug('patenschaft').one() %}
+    <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 3rem;">
+    <div class="row">
+      <div class="col-md-4">
+        <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+      </div>
+      <div class="col-md-8" style="padding-top: 2rem;">
+        <h3> {{ entry.anleser }} </h3>
+        <div id="copy"> {{ entry.text }}</div>
+      </div>
+    </div>
+    </div> <!-- Weitere Informationen zum Freiwilligendienst -->
+  </div> <!-- Weißer Hintergrund -->
 
   {% endblock %}
