--- a/templates/craft_sicherungWebsite/templates/projekte/themen.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/themen.html
@@ -290,8 +290,21 @@
   </div>
 </div> <!-- Container für Carousel -->
 
+{% set entry = craft.entries.section('fuerSie').slug('fuelleintrag').one() %}
+<div class="container-fluid no-padding"  style="background-image: url({{ entry.bild.one().url }});">
+  <div class="row">
+    <div class="col-1">  </div>
+    <div class="col-2">   <img class="img-fluid" src="{{ entry.bild2.one().url }}" style="max-height: 200px;"> </div>
+    <div class="col-1">  </div>
+    <div class="col-7">
+      <h4 style="color: white;"> {{ entry.zusatzfeld2 }} </h4>
+      <div id="copy" style="color: white;"> {{ entry.zusatzfeld3 }}</div>
+      <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button" style="margin-bottom: 2rem;">Jetzt Spenden</a>
+    </div>
+  </div>
+</div> <!-- Der orange Berg mit dem Spendenaufruf -->
 
-<div class="container-fluid no-padding" style="background-color: #ffffff;">
+<div class="container-fluid no-padding" style="background-color: #ffffff; padding-bottom: 3rem;">
 
   <div class="container achterspaltenlayout" style="padding-bottom: 0px;">
     <h4> Quellen: </h4>
@@ -306,6 +319,24 @@
   8 Welthungerhilfe: „FACT-Sheet. Fakten und Zahlen zu Wasser“, 2013, http://www.welthungerhilfe.de/fileadmin/user_upload/Themen/ <br>
 
   </div>
+
+  <div class="container zwoelferspaltenlayout text-center">
+    {% set entry = craft.entries.section('projekte').slug('erfahrungsberichte').one() %}
+   <hr style="height: 1px;">  <div id="anleser"> Erfahren Sie, was die Menschen vor Ort berichten </div>
+  </div>
+
+  <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px;">
+  <div class="row">
+    <div class="col-md-4">
+      <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
+    </div>
+    <div class="col-md-8" style="padding-top: 2rem;">
+      <h3> {{ entry.title }} </h3>
+      <div id="copy"> {{ entry.text }}</div>
+    </div>
+  </div>
+  </div> <!-- Weitere Informationen zum Freiwilligendienst -->
+
 
 </div> <!-- Weißer Hintergrundcontainer -->
 
