--- a/templates/craft_sicherungWebsite/templates/ueberUns/index.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/index.html
@@ -5,7 +5,7 @@
 {% block headerbildPosition1 %}
 
 <div class="container-fluid no-padding" style="padding-top: 70px;">
-  <img class="img-fluid" src=" {{ craft.assets.filename('chance-ueber-uns-header.jpg').one().getUrl() }} ">
+  <img class="img-fluid mx-auto d-block" src=" {{ craft.assets.filename('chance-ueber-uns-header.jpg').one().getUrl() }} ">
 </div>
 
 
@@ -27,6 +27,7 @@
     </div>
   </div>
 
+
   <div class="container zwoelferspaltenlayout">
     <div class="card-deck">
       <div class="row">
@@ -38,6 +39,7 @@
         <div class="col-lg-4 col-md-6 col-sm-6" style="padding-bottom: 30px;">
 
         <div class="card border-light h-100">
+          <img class="card-img-top"  src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}" alt="Card image">
           <div class="card-body">
               <h3>{{ entry.title }}</h3>
               <div id="copy"> {{ entry.text }} </div>
