--- a/templates/craft_sicherungWebsite/web/CSSundJS/stylevorgaben.css
+++ b/templates/craft_sicherungWebsite/web/CSSundJS/stylevorgaben.css
@@ -121,6 +121,10 @@ h4 {
   font-family: 'source_sans_prosemibold';
 }
 
+#kind {
+  max-height: 280px;
+}
+
 @media all and (max-width: 700px)  {
   h1 {
     font-size: 31px;
@@ -140,6 +144,10 @@ h4 {
   #anleser {
     font-size: 21px;
     line-height: 31px;  }
+
+    #kind {
+      max-height: 400px;
+    }
   }
 
 /* Bei den Empfehlungs-boxen wird so die Umrandung entfernt */
